testing functions and SRS 100% working

--- a/tetris/index.html
+++ b/tetris/index.html
@@ -24,6 +24,16 @@
 
 <body>
 
+  <div id="canvasContainer"></div>
+  <div style="display:none">
+    <button>UP</button>
+    <button>DOWN</button>
+    <button>LEFT</button>
+    <button>RIGHT</button>
+    <button>RIGHT</button>
+    <button>ROTATE CW</button>
+    <button>ROTATE CCW</button>
+  </div>
 
   <script src="tetrominoes.js"></script>
   <script src="board.js"></script>
