added main view

--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -2,6 +2,8 @@
 <html lang='en'>
 <head>
 
+<script src="/js/sits.js"></script>
+<link rel='icon' href='/images/kiwi.ico' type='image/x-icon'>
 
 
 <link rel="stylesheet" href="modal.css">
