--- a/pong/index.html
+++ b/pong/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang='en'>
 <head>
+
+    <script src="/js/site.js"></script>
+    <link rel='icon' href='/images/kiwi.ico' type='image/x-icon'>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js" integrity="sha512-3WFaXQUsbGieECwv3t3DvyAkZ7pp+/rIKOQnx7NKhfwIF0u2l+DYsE2eF635ewJVj3YTU4/Ug6UqEkSTZCiSew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
     <style> body {padding: 0; margin: 0; background-color: #2b2b2b;} </style>
