--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+
+    <script src="/js/site.js"></script>
+    <link rel='icon' href='/images/kiwi.ico' type='image/x-icon'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku</title>
