--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
    </div>
  <div class="cards" id="cardContainer"></div>
   
+ <footer>
+  see the code of all games on <a href="https://github.com/encarbassot/p5js_games">GitHub</a>
+ </footer>
 
   </body>
   <script type="text/javascript">
