game car with lanes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <script src="/js/site.js"></script>
+    <script src="/lib/site.js"></script>
     <link rel='icon' href='/images/kiwi.ico' type='image/x-icon'>
 
     <link rel="stylesheet" href="scrollbar.css">
@@ -31,7 +31,7 @@
  <div class="cards" id="cardContainer"></div>
   
  <footer>
-  see the code of all games on <a href="https://github.com/encarbassot/p5js_games">GitHub</a>
+  see the code of all games on <a href="https://github.com/encarbassot/p5js_games" target="_blank">GitHub</a>
  </footer>
 
   </body>
