--- a/minesweeper/index.html
+++ b/minesweeper/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 
-<script src="/js/sits.js"></script>
+<script src="/lib/sits.js"></script>
 <link rel='icon' href='/images/kiwi.ico' type='image/x-icon'>
 
 
