--- a/sudoku/index.html
+++ b/sudoku/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
 
 
-    <script src="/js/site.js"></script>
+    <script src="/lib/site.js"></script>
     <link rel='icon' href='/images/kiwi.ico' type='image/x-icon'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sudoku</title>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.5.0/p5.js" integrity="sha512-3WFaXQUsbGieECwv3t3DvyAkZ7pp+/rIKOQnx7NKhfwIF0u2l+DYsE2eF635ewJVj3YTU4/Ug6UqEkSTZCiSew==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
 
-    <script src="sudoku.js"></script>
-    <script src="suk.js"></script>
+    <!-- <script src="sudoku.js"></script>-->
+    <script src="suk.js"></script> 
+    <script src="generate.js"></script>
     <style>
         body{
             background-color: #333;
